# flex-alloc

./: Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: build.yml
benches/: compare_vec.rs
examples/bumpalo/: Cargo.toml
examples/bumpalo/src/: main.rs
flex-alloc/: Cargo.toml  README.md
flex-alloc-secure/: Cargo.toml  README.md
flex-alloc-secure/benches/: protect.rs
flex-alloc-secure/src/: alloc.rs  boxed.rs  bytes.rs  init.rs  lib.rs  protect.rs  random.rs  secured.rs  stack.rs  vec.rs
flex-alloc-secure/tests/: protect.rs  tests.rs
flex-alloc/benches/: compare_vec.rs
flex-alloc/src/: alloc.rs  borrow.rs  boxed.rs  capacity.rs  error.rs  lib.rs
flex-alloc/src/storage/: alloc.rs  array.rs  boxed.rs  bytes.rs  inline.rs  insert.rs  mod.rs  spill.rs  utils.rs
flex-alloc/src/vec/: buffer.rs  config.rs  cow.rs  drain.rs  insert.rs  into_iter.rs  macros.rs  mod.rs  splice.rs
flex-alloc/tests/: boxed.rs  vec.rs  zeroize.rs
src/: borrow.rs  boxed.rs  error.rs  index.rs  lib.rs
src/storage/: alloc.rs  mod.rs  utils.rs  zero.rs
src/vec/: buffer.rs  config.rs  cow.rs  drain.rs  insert.rs  into_iter.rs  macros.rs  mod.rs  splice.rs
tests/: box.rs  vec.rs  zeroize.rs
