[package]
name = "flex-alloc"
version = "0.0.1"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2021"
description = "Data structures with extra flexible storage"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andrewwhitehead/flex-alloc/"
categories = ["data-structures", "memory-management", "no-std"]
keywords = ["vec", "zeroize"]

[features]
default = ["alloc"]
alloc = ["allocator-api2?/alloc", "zeroize?/alloc"]
std = ["alloc", "allocator-api2?/std", "zeroize?/std"]
allocator-api2 = ["dep:allocator-api2"]
zeroize = ["dep:zeroize"]

[dependencies]
allocator-api2 = { version = "0.2", default-features = false, optional = true }
zeroize = { version = "1", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = [
    "cargo_bench_support",
    "html_reports",
] }
rand = "0.8"
rstest = "0.18"

[[bench]]
name = "compare_vec"
harness = false
required-features = ["alloc"]
