[package]
name = "flex-alloc-secure"
version = "0.0.2"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2021"
description = "Secured allocations for flex-alloc"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/andrewwhitehead/flex-alloc/"
categories = ["data-structures", "memory-management", "no-std"]
keywords = ["secure", "vec", "zeroize"]
rust-version = "1.80"

[target.'cfg(unix)'.dependencies]
libc = "0.2.158"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
] }

[dependencies]
chacha20poly1305 = { version = "0.10", features = ["reduced-round"] }
const-default = "1"
flex-alloc = { version = "0.0.5", path = "../flex-alloc", features = [
    "alloc",
    "zeroize",
] }
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = [
    "cargo_bench_support",
    "html_reports",
] }

[[bench]]
name = "protect"
harness = false
