[package]
name = "flex-alloc"
version = "0.0.3"
authors = ["Andrew Whitehead <cywolf@gmail.com>"]
edition = "2021"
description = "Data structures with extra flexible storage"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/andrewwhitehead/flex-alloc/"
categories = ["data-structures", "memory-management", "no-std"]
keywords = ["vec", "zeroize"]
rust-version = "1.80"

[features]
default = ["alloc", "zeroize"]
alloc = ["allocator-api2?/alloc", "zeroize?/alloc"]
std = ["alloc", "allocator-api2?/std", "zeroize?/std"]
allocator-api2 = ["dep:allocator-api2"]
nightly = ["allocator-api2/nightly"]
zeroize = ["dep:zeroize"]

[dependencies]
allocator-api2 = { version = "0.2", default-features = false, optional = true }
const-default = "1"
zeroize = { version = "1", default-features = false, optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = [
    "cargo_bench_support",
    "html_reports",
] }
rstest = "0.23"

[[bench]]
name = "compare_vec"
harness = false
required-features = ["alloc"]
